// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-progress-bar Custom Max 1`] = `
[
  <p>
    50/200
    <br />
    <progress
      className="progress-bar"
      max={200}
      value={50}
    />
  </p>,
  <p>
    100/200
    <br />
    <progress
      className="progress-bar"
      max={200}
      value={100}
    />
  </p>,
]
`;

exports[`Storyshots ebay-progress-bar Default 1`] = `
[
  <p>
    0%
    <br />
    <progress
      className="progress-bar"
      max={100}
      value={0}
    />
  </p>,
  <p>
    50%
    <br />
    <progress
      className="progress-bar"
      max={100}
      value={50}
    />
  </p>,
  <p>
    100%
    <br />
    <progress
      className="progress-bar"
      max={100}
      value={100}
    />
  </p>,
]
`;

exports[`Storyshots ebay-progress-bar Fluid 1`] = `
<p>
  <progress
    className="progress-bar progress-bar--fluid"
    max={100}
    value={50}
  />
</p>
`;
